minor fixes in navbar

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
     <header>
         <nav class="navbar navbar-dark mx-md-2 mx-sm-3 mt-sm-3 p-0 mt-md-4">
             <div class="container-fluid mx-md-4 py-md-4 py-3 bg-blue">
-                <a href="index.html" class="navbar-brand ms-4">Pratik Deshpande</a>
-                <button class="navbar-toggler border-0 order-2" data-bs-toggle="offcanvas"
+                <a href="index.html" class="navbar-brand ms-md-4 ms-3">Pratik Deshpande</a>
+                <button class="navbar-toggler border-0 order-2 py-0 px-0 pe-3 pb-1" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasRight" aria-expanded="false" aria-controls="offcanvasRight">
-                    <span class="navbar-toggler-icon"></span>
+                    <span><i class="bi bi-list text-white fs-3"></i></span>
                 </button>
                 <ul class="navbar-nav ms-auto flex-row d-none d-md-flex">
                     <li class="nav-item">
@@ -98,7 +98,7 @@
             <div class="offcanvas-body d-flex flex-column justify-content-between">
                 <ul class="navbar-nav flex-column ms-3">
                     <li class="nav-item d-block d-md-none">
-                        <a href="index.html" class="nav-link text-white me-4">Home</a>
+                        <a href="index.html" class="nav-link text-white me-4 fs-5">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link text-white mt-2 fs-5" href="#" id="navbarDropdown" role="button"
@@ -106,7 +106,7 @@
                             Gallery
                             <span class="d-inline ms-2"><i class="bi bi-chevron-down"></i></span>
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu dropdown-menu-end animate slideIn" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item fw-normal" href="gallery-1.html">Gallery - 1</a></li>
                             <li><a class="dropdown-item fw-normal" href="gallery-2.html">Gallery - 2</a></li>
                             <li><a class="dropdown-item fw-normal" href="gallery-3.html">Gallery - 3</a></li>
@@ -119,7 +119,7 @@
                             Video
                             <span class="d-inline ms-2"><i class="bi bi-chevron-down"></i></span>
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu dropdown-menu-end animate slideIn" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item fw-normal" href="video-1.html">Video - 1</a></li>
                             <li><a class="dropdown-item fw-normal" href="video-2.html">Video - 2</a></li>
                             <li><a class="dropdown-item fw-normal" href="video-3.html">Video - 3</a></li>
@@ -132,7 +132,7 @@
                             Collection
                             <span class="d-inline ms-2"><i class="bi bi-chevron-down"></i></span>
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu dropdown-menu-end animate slideIn" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item fw-normal" href="col-1.html">Collection - 1</a></li>
                             <li><a class="dropdown-item fw-normal" href="col-2.html">Collection - 2</a></li>
                             <li><a class="dropdown-item fw-normal" href="col-3.html">Collection - 3</a></li>
@@ -140,13 +140,13 @@
                         </ul>
                     </li>
                     <li class="nav-item d-block d-md-none">
-                        <a href="about.html" class="nav-link text-white me-4">About</a>
+                        <a href="about.html" class="nav-link text-white me-4 fs-5">About</a>
                     </li>
                     <li class="nav-item d-block d-md-none">
-                        <a href="contact.html" class="nav-link text-white me-4">Contact</a>
+                        <a href="contact.html" class="nav-link text-white me-4 fs-5">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a href="exhibit.html" class="nav-link text-white mt-2">Exhibit</a>
+                        <a href="exhibit.html" class="nav-link text-white mt-2 fs-5">Exhibit</a>
                     </li>
                 </ul>
 
@@ -181,14 +181,6 @@
                     <img src="img/fares-nimri-v6uFg-OLrCc-unsplash.jpg" alt="" class="workCls">
                     <img src="img/frank-holleman-fvmMDEvInLE-unsplash.jpg" alt="" class="workCls">
                     <img src="img/frank-holleman-fyjUa9NUzSk-unsplash.jpg" alt="" class="workCls">
-                    <img src="img/frank-holleman-zj2H5LfWFpQ-unsplash.jpg" alt="" class="workCls">
-                    <img src="img/himanshu-singh-gurjar-iSi02D_Qx_w-unsplash.jpg" alt="" class="workCls">
-                    <img src="img/lewis-j-goetz-67heLkXJ340-unsplash(1).jpg" alt="" class="workCls">
-                    <img src="img/lewis-j-goetz-fUX_yMCuOx8-unsplash(1).jpg" alt="" class="workCls">
-                    <img src="img/martin-jernberg-XI7lwAWzhZQ-unsplash.jpg" alt="" class="workCls">
-                    <img src="img/nandhu-kumar-5NGTf4oD8RA-unsplash.jpg" alt="" class="workCls">
-                    <img src="img/navdeep-panwar-_Qtgj2nXqyY-unsplash.jpg" alt="" class="workCls">
-                    <img src="img/nischal-masand-WTeucliaDfQ-unsplash.jpg" alt="" class="workCls">
                 </div>
             </div>
         </div>
@@ -197,7 +189,8 @@
     <footer>
         <div class="container-fluid px-sm-3 my-sm-4 mt-sm-3 mt-2 mt-2 p-0">
             <div class="bg-blue mx-sm-0 mx-md-3 py-3 py-sm-4 px-sm-4 mx-0">
-                <div class="d-flex flex-md-row flex-column justify-content-md-between justify-content-center align-items-center gap-2">
+                <div
+                    class="d-flex flex-md-row flex-column justify-content-md-between justify-content-center align-items-center gap-2">
                     <div class="f-content-left d-flex flex-md-row flex-column ms-md-3 align-items-center flex-wrap">
                         <div class="f-social-icons d-inline-block">
                             <a href="#" class="text-white me-3 fs-6"><i class="bi bi-instagram"></i></a>
