gallery pages completed

--- a/gallery-1.html
+++ b/gallery-1.html
@@ -18,7 +18,7 @@
     <link href="https://api.fontshare.com/v2/css?f[]=ranade@700,300,100,400,500&display=swap" rel="stylesheet">
     <link href="https://api.fontshare.com/v2/css?f[]=author@400,500,200,600,300,700&display=swap" rel="stylesheet">
 
-    <title>Pratik Deshpande - Home</title>
+    <title>Pratik Deshpande - Gallery</title>
 
     <style>
         /* Styling for Gallery */
@@ -31,7 +31,7 @@
         #app {
             -webkit-column-count: 4;
             -moz-column-count: 4;
-            column-count: 3;
+            column-count: 1;
             -webkit-column-gap: 15px;
             -moz-column-gap: 15px;
             column-gap: 25px;
@@ -41,25 +41,13 @@
             margin-bottom: 25px;
         }
 
-        @media (max-width: 768px) {
-            #app {
-                column-gap: 15px;
-                column-count: 2;
-            }
-
-            #app img {
-                margin-bottom: 15px;
-            }
-        }
-
         @media (max-width: 576px) {
             #app {
                 column-gap: 5px;
-                column-count: 1;
             }
 
             #app img {
-                margin-bottom: 15px;
+                margin-bottom: 10px;
             }
         }
     </style>
@@ -77,7 +65,7 @@
                 </button>
                 <ul class="navbar-nav ms-auto flex-row d-none d-md-flex">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link text-white me-4 active">Home</a>
+                        <a href="index.html" class="nav-link text-white me-4">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="about.html" class="nav-link text-white me-4">About</a>
@@ -101,7 +89,7 @@
                         <a href="index.html" class="nav-link text-white me-4 fs-5">Home</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link text-white mt-2 fs-5" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link text-white mt-2 fs-5 active" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Gallery
                             <span class="d-inline ms-2"><i class="bi bi-chevron-down"></i></span>
@@ -181,6 +169,21 @@
                     <img src="img/fares-nimri-v6uFg-OLrCc-unsplash.jpg" alt="" class="workCls">
                     <img src="img/frank-holleman-fvmMDEvInLE-unsplash.jpg" alt="" class="workCls">
                     <img src="img/frank-holleman-fyjUa9NUzSk-unsplash.jpg" alt="" class="workCls">
+                    <img src="img/frank-holleman-zj2H5LfWFpQ-unsplash.jpg" alt="" class="workCls">
+                    <img src="img/himanshu-singh-gurjar-iSi02D_Qx_w-unsplash.jpg" alt="" class="workCls">
+                    <img src="img/lewis-j-goetz-67heLkXJ340-unsplash(1).jpg" alt="" class="workCls">
+                    <img src="img/lewis-j-goetz-fUX_yMCuOx8-unsplash(1).jpg" alt="" class="workCls">
+                    <img src="img/martin-jernberg-XI7lwAWzhZQ-unsplash.jpg" alt="" class="workCls">
+                    <img src="img/nandhu-kumar-5NGTf4oD8RA-unsplash.jpg" alt="" class="workCls">
+                    <img src="img/navdeep-panwar-_Qtgj2nXqyY-unsplash.jpg" alt="" class="workCls">
+                    <img src="img/nischal-masand-WTeucliaDfQ-unsplash.jpg" alt="" class="workCls">
+                    <img src="img/pablo-heimplatz-fVL0zZdk-R4-unsplash.jpg" alt="" class="workCls">
+                    <img src="img/pexels-lucas-decrock-1253664.jpg" alt="" class="workCls">
+                    <img src="img/sagar-dani-SgQhLGTEr58-unsplash.jpg" alt="" class="workCls">
+                    <img src="img/saksham-gangwar-eaOqXhVF5gc-unsplash.jpg" alt="" class="workCls">
+                    <img src="img/saksham-gangwar-sTp-dDBc4Xw-unsplash.jpg" alt="" class="workCls">
+                    <img src="img/swapnil-dwivedi-DalZb3w87xE-unsplash.jpg" alt="" class="workCls">
+                    <img src="img/swodesh-shakya-ObWYixRzqiU-unsplash.jpg" alt="" class="workCls">
                 </div>
             </div>
         </div>
