blank space issue fixed, minor changes remain

--- a/video-1.html
+++ b/video-1.html
@@ -116,11 +116,11 @@
     </header>
 
     <main>
-        <section class="video-container">
-            <div class="container-fluid px-md-2">
-                <div class="row w-100 justify-content-center px-md-4 px-1">
+        <section class="video-container px-md-1">
+            <div class="container-fluid px-md-3">
+                <div class="row w-100 px-0 px-md-1 mt-4 mx-0">
                     <div class="col-md-12">
-                        <div class="ratio ratio-16x9 my-4">
+                        <div class="ratio ratio-16x9 mb-4">
                             <iframe src="https://www.youtube.com/embed/vTt8gW_O3pw" title="YouTube video player"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                     <div class="col-md-12">
-                        <div class="ratio ratio-16x9 my-4">
+                        <div class="ratio ratio-16x9 mb-4">
                             <iframe src="https://www.youtube.com/embed/vTt8gW_O3pw" title="YouTube video player"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                     <div class="col-md-12">
-                        <div class="ratio ratio-16x9 my-4">
+                        <div class="ratio ratio-16x9 mb-4">
                             <iframe src="https://www.youtube.com/embed/vTt8gW_O3pw" title="YouTube video player"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                     <div class="col-md-12">
-                        <div class="ratio ratio-16x9 my-4">
+                        <div class="ratio ratio-16x9 mb-4">
                             <iframe src="https://www.youtube.com/embed/vTt8gW_O3pw" title="YouTube video player"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -152,7 +152,7 @@
                         </div>
                     </div>
                     <div class="col-md-12">
-                        <div class="ratio ratio-16x9 my-4">
+                        <div class="ratio ratio-16x9 mb-4">
                             <iframe src="https://www.youtube.com/embed/vTt8gW_O3pw" title="YouTube video player"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                     <div class="col-md-12">
-                        <div class="ratio ratio-16x9 my-4">
+                        <div class="ratio ratio-16x9 mb-4">
                             <iframe src="https://www.youtube.com/embed/vTt8gW_O3pw" title="YouTube video player"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -168,7 +168,7 @@
                         </div>
                     </div>
                     <div class="col-md-12">
-                        <div class="ratio ratio-16x9 my-4">
+                        <div class="ratio ratio-16x9 mb-4">
                             <iframe src="https://www.youtube.com/embed/vTt8gW_O3pw" title="YouTube video player"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
