--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
                 <form class="row g-3">
                     <div class="col-md-6">
                         <label for="inputEmail4" class="form-label">First Name *</label>
-                        <input type="text" class="form-control" id="inputEmail4">
+                        <input type="text" class="form-control" id="inputEmail4" required>
                     </div>
                     <div class="col-md-6">
                         <label for="inputPassword4" class="form-label">Last Name</label>
@@ -134,11 +134,11 @@
                     </div>
                     <div class="col-12">
                         <label for="inputAddress" class="form-label">Email *</label>
-                        <input type="email" class="form-control" id="inputAddress">
+                        <input type="email" class="form-control" id="inputAddress" required>
                     </div>
                     <div class="col-12">
                         <label for="exampleFormControlTextarea1" class="form-label">Message *</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
                       </div>
                     <div class="col-12">
                         <button class="btn">Submit</button>
